# RO

./: .gitignore  README.md
Projet/: B_35_result.txt  CMakeLists.txt  combinaison  combinaison.c  enum  enum+Debug.cpp  enum.cpp  full_valgrind  projet.cpp  ro_test.cpp  tournee.h
Projet/Arendre/include/: chrono.h  donnees.h  probleme.h  regroupement.h
Projet/Arendre/src/: donnees.cpp  glpkwrapper.cpp  regroupement.cpp
Projet/Rapport/: #Rapport.md#  Rapport.md  mooss.md
Projet/include/: chrono.h  container_overload.h  donnees.h  glpkwrapper.h  probleme.h  regroupement.h  tournee.h
Projet/src/: chrono.cpp  donnees.cpp  glpkwrapper.cpp  probleme.cpp  regroupement.cpp  tournee.cpp
TP1/: Ex1.1.mod  Ex1.4.1.mod  Ex1.4.2.mod
TP1/TP1_PHALAVANDISHVILI_JAMET/: Ex1.1.mod  Ex1.4.1.mod  Ex1.4.2.mod
TP1/medocs/__MACOSX/: ._medocs
TP2/: Ex2.6.mod  TP 2.md  TP2.txt
TP2/Arendre/: Ex2.6.mod  Ex_tp.mod
TP2/camera/: camera2.mod  camera3.mod  camera4.mod
TP3/: DonneEx2.4.txt  Explication2.4.txt  ex2.4  ex2.4.c  ex2.4.mod  persMachine.lp
TP3/TP3/: ExplicationTxtGLPK.txt  a.out  glpk.h  musee.c  musee.lp
TP3/TP3_PHALAVANDISHVILI_JAMET/: DonneEx2.4.txt  ex2.4.c~  ex2.4.mod
